--- a/statics/scss/layout/_footer.scss
+++ b/statics/scss/layout/_footer.scss
@@ -3,6 +3,9 @@
   background-color: #777;
   padding: 30px 0 0;
   color: #f1f1f1;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
   &_content {
     img {
       margin-bottom: 15px;
