--- a/statics/scss/layout/_header.scss
+++ b/statics/scss/layout/_header.scss
@@ -23,7 +23,10 @@
     }
     min-height: 30px;
     background-color: #e8e8e8;
-    display: flex;
+    @media (min-width: 992px){
+      display: flex !important;
+    }
+   
     align-items: center;
     flex-wrap: wrap;
 
@@ -35,6 +38,7 @@
     background-color: #00552e;
     min-height: 45px;
     position: relative;
+    
     &.active {
       box-shadow: 1px 1px 10px rgba(0,0,0,.15);
       -webkit-animation: stuckMoveDown .6s;
@@ -45,8 +49,38 @@
       right: 0;
       margin: 0 auto;
       z-index: 999;
-  }
-  
+    }
+     &_menu{
+      @media (max-width: 992px){
+          position: fixed;
+          top: 0;
+          bottom: 0;
+          width: 260px;
+          background-color: #f7f7f7;
+          left: 0;
+          overflow-y: auto;
+          overflow-x: hidden;
+          -webkit-overflow-scrolling: touch;
+          -webkit-transition: -webkit-transform .2s;
+          transition: -webkit-transform .2s;
+          -o-transition: transform .2s;
+          transition: transform .2s;
+          transition: transform .2s, -webkit-transform .2s;
+          -webkit-transform: translateX(-270px);
+          -ms-transform: translateX(-270px);
+          transform: translateX(-270px);
+          -webkit-box-shadow: 0px 0px 10px 0px rgba(0,0,0,.5);
+          box-shadow: 0px 0px 10px 0px rgba(0,0,0,.5);
+          z-index: 1045;
+          &.active{
+            -webkit-transform: translate(0, 0);
+              -ms-transform: translate(0, 0);
+              transform: translate(0, 0);
+              opacity: 1;
+          }
+        }
+    }
+ 
     &_left {
       display: flex;
       align-items: center;
@@ -60,6 +94,9 @@
           padding: 0;
           width: 7%;
           margin-right: 25px;
+          &:hover{
+            background: transparent;
+          }
         }
         &:last-child {
           padding-right: 0;
@@ -77,7 +114,9 @@
         -o-transition: background-color .3s;
         transition: background-color .3s;
         position: relative;
-  
+        .toggle {
+          display: none;
+      }
         > a {
           text-transform: uppercase;
           line-height: 20px !important;
@@ -98,59 +137,69 @@
   
         &.menu-item-has-children {
           > .sub-menu {
-            position: absolute;
-            min-width: 260px;
-            max-height: 0;
-            z-index: 9;
-            opacity: 0;
-            margin: 0;
-            -webkit-transition: opacity .25s;
-            -o-transition: opacity .25s;
-            transition: opacity .25s;
-            color: #777;
-            background-color: #fff;
-            text-align: left;
-            display: table;
-            left: -99999px;
-            box-shadow: 1px 1px 15px rgba(0, 0, 0, 0.15);
-            width: 100%;
-            padding: 0;
-            border: 1px solid #f8c713;
+            @media (min-width: 992px){
+              position: absolute;
+              min-width: 260px;
+              max-height: 0;
+              z-index: 9;
+              opacity: 0;
+              margin: 0;
+              -webkit-transition: opacity .25s;
+              -o-transition: opacity .25s;
+              transition: opacity .25s;
+              color: #777;
+              background-color: #fff;
+              text-align: left;
+              display: table;
+              left: -99999px;
+              box-shadow: 1px 1px 15px rgba(0, 0, 0, 0.15);
+              width: 100%;
+              padding: 0;
+              border: 1px solid #f8c713;
+            }
           }
   
           &:hover > .sub-menu {
-            left: 0;
-            top: 92px;
-            opacity: 1;
+            @media (min-width: 992px){
+              left: 0;
+              top: 92px;
+              opacity: 1;
+            }
           }
   
           > .sub-menu > li.menu-item-has-children:hover .sub-menu {
-            display: block;
-            position: absolute;
-            left: 100%;
-            right: 0;
-            top: 0;
-            width: 100%;
-            border: 1px solid #f8c713;
+            @media (min-width: 992px){
+              display: block;
+              position: absolute;
+              left: 100%;
+              right: 0;
+              top: 0;
+              width: 100%;
+              border: 1px solid #f8c713;
+            }
           }
         }
   
         .sub-menu > li > a {
-          background: url(../img/bullet-menu-child.png) no-repeat 5px 12px;
-          border-bottom: 2px dotted #1c966d;
-          color: #fff;
-          font-size: 14px;
-          height: auto;
-          line-height: 20px;
-          padding: 5px;
-          padding-left: 15px;
-          background-color: #00895b;
-          margin: 0;
-          display: block;
+          @media (min-width: 992px){
+            background: url(../img/bullet-menu-child.png) no-repeat 5px 12px;
+            border-bottom: 2px dotted #1c966d;
+            color: #fff;
+            font-size: 14px;
+            height: auto;
+            line-height: 20px;
+            padding: 5px;
+            padding-left: 15px;
+            background-color: #00895b;
+            margin: 0;
+            display: block;
+          }
         }
   
         &.menu-item-has-children > .sub-menu > li.menu-item-has-children .sub-menu {
-          display: none;
+          @media (min-width: 992px){
+            display: none;
+          }
         }
         &.header_search {
           > a{
