update chi tiết tin tức, hỏ đáp cùng chuyên gia

--- a/statics/scss/page/_contact.scss
+++ b/statics/scss/page/_contact.scss
@@ -71,7 +71,7 @@
         border-color: rgba(0, 0, 0, 0.09);
         color: currentColor !important;
         padding: 10px 11px;
-        min-height: 120px;
+        max-height: 120px;
         width: 100%;
       }
   
