--- a/statics/scss/page/_body.scss
+++ b/statics/scss/page/_body.scss
@@ -179,6 +179,7 @@ body{
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
       font-size: 30px;
+      text-transform: uppercase;
       @media only screen and (max-width: 849px){
         font-size: 24px;
       }
@@ -557,3 +558,172 @@ body{
 .bg_page img {
   width: 1000%;
 }
+.custom_page{
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-size: cover !important;
+  background-repeat: no-repeat !important;
+  background-position: 50% 50%;
+  transition: opacity 1s;
+    -webkit-transition: opacity 1s;
+    position: relative;
+    &::after{
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      height: 100%;
+      right: 0;
+      bottom: 0;
+      padding: 0;
+      margin: 0;
+      background-color: #fff;  
+      opacity: .9;
+    }
+    .container{
+      position: relative;
+      z-index: 1;
+    }
+}
+.team_item {
+  .team_img {
+    box-shadow: 0px 0px 3px 2px #00A64B;
+    -webkit-mask-image: none;
+    border-radius: 3%;
+    position: relative;
+    margin: 0 auto;
+    overflow: hidden;
+
+    .team_img_box {
+      padding-top: 250px;
+      position: relative;
+      overflow: hidden;
+
+      img {
+        right: 0;
+        width: 100%;
+        height: 100%;
+        bottom: 0;
+        left: 0;
+        top: 0;
+        position: absolute;
+        -o-object-position: 50% 50%;
+        object-position: 50% 50%;
+        -o-object-fit: cover;
+        object-fit: cover;
+      }
+    }
+  }
+
+  .team_name {
+    text-align: center;
+    padding: 10px 10px 20px;
+    color: #00552e;
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 1.3;
+  }
+
+  margin-bottom: 30px;
+}
+
+.team.custom_content .row {
+  &:nth-child(2) .team_item .team_img .team_img_box, &:nth-child(3) .team_item .team_img .team_img_box {
+    padding-top: 170px;
+  }
+
+  &:nth-child(2) .team_item .team_name, &:nth-child(3) .team_item .team_name {
+    font-size: 14px;
+  }
+}
+.form_advise {
+  background-size: cover !important;
+  background-repeat: no-repeat !important;
+  background-position: 50% 50%;
+  padding: 30px;
+  .form_advise_body{
+    .form-title {
+      background: #008749;
+      border-radius: 5px 5px 0 0;
+      text-align: center;
+      padding: 10px;
+      font-size: 18px;
+      color: #fff;
+      border-bottom: 3px solid #ebc45e;
+    }
+  
+    margin-bottom: 30px;
+    background: #fff;
+    box-shadow: 0px 0px 10px #29b469;
+    border: 2px solid #29b469;
+    border-radius: 10px;
+  
+    .form_body {
+      padding: 30px 15px 0 15px;
+  
+      input, select {
+        border-radius: 5px;
+        background-color: #FFFFFF;
+        border: 1px solid #ddd;
+        height: 40px;
+        padding: 0 11px;
+        width: 100%;
+        -webkit-appearance: none;
+        -moz-appearance: none;
+        appearance: none;
+      }
+  
+      .form-group {
+        margin-bottom: 15px;
+      }
+  
+      select {
+        background-image: url("data:image/svg+xml;charset=utf8, %3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='%23333' stroke-width='2' stroke-linecap='round' stroke-linejoin='round' class='feather feather-chevron-down'%3E%3Cpolyline points='6 9 12 15 18 9'%3E%3C/polyline%3E%3C/svg%3E");
+        background-position: right .45em top 50%;
+        background-repeat: no-repeat;
+        padding-right: 21px;
+        background-size: auto 16px;
+      }
+  
+      textarea {
+        resize: none;
+        border-radius: 5px;
+        background-color: #FFFFFF;
+        box-shadow: none;
+        border-color: rgba(0, 0, 0, 0.09);
+        color: currentColor !important;
+        padding: 10px 11px;
+        max-height: 120px;
+        width: 100%;
+      }
+  
+      button {
+        background: #008749;
+        font-weight: 100;
+        text-transform: capitalize;
+        padding: 0 35px;
+        border-radius: 5px;
+        border: 1px solid transparent;
+        color: #fff;
+        letter-spacing: .03em;
+        height: 40px;
+        font-size: 16px;
+      }
+    }
+    .form-hotline p {
+      text-align: center;
+      padding: 0 0 30px 0;
+      font-weight: bold;
+      font-size: 18px;
+      color: #333;
+    }
+  }
+}
+.aesthetic_aq {
+  padding-bottom: 30px;
+  .aesthetic_aq_img img {
+    margin: auto;
+    display: block;
+  }
+}
+
