--- a/statics/scss/page/_news.scss
+++ b/statics/scss/page/_news.scss
@@ -215,3 +215,110 @@
       }
       
 }
+.news_page{
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+.news_details_page {
+  padding-top: 30px;
+  padding-bottom: 30px;
+
+  h6 {
+    font-size: 11px;
+    font-weight: 700;
+    line-height: 1.05;
+    letter-spacing: .05em;
+    text-transform: uppercase;
+    opacity: .8;
+    color: #555;
+    margin-bottom: 5px;
+
+    a {
+      color: #4d4d4d;
+    }
+  }
+}
+
+.news_deatails_title {
+  font-weight: 700;
+  font-size: 27px;
+  line-height: 1.3;
+  color: #555;
+  margin-bottom: 13px;
+}
+
+.news_deatails_meta {
+  margin-bottom: 24px;
+  font-size: 11px;
+}
+
+.news_details_image {
+  margin-bottom: 24px;
+}
+
+.news_deatails_desc {
+  color: #555;
+
+  h2 {
+    font-size: 1.6em;
+    line-height: 1.3;
+    font-weight: 700;
+  }
+
+  p {
+    margin-bottom: 20px;
+  }
+
+  img {
+    margin: auto;
+    display: block;
+  }
+}
+
+.blog-share {
+  margin-bottom: 30px;
+  a {
+  border: 2px solid silver;
+  border-radius: 100%;
+  width: 32px;
+  height: 32px;
+  display: inline-block;
+  line-height: 30px;
+  color: silver;
+
+  &.facebook:hover {
+    background-color: #3a589d;
+    border-color: #3a589d;
+    color: #fff;
+  }
+
+  &.twitter:hover {
+    background-color: #2478ba;
+    border-color: #2478ba;
+    color: #fff;
+  }
+
+  &.email:hover {
+    background-color: #111;
+    border-color: #111;
+    color: #fff;
+  }
+
+  &.pinterest:hover {
+    background-color: #cb2320;
+    border-color: #cb2320;
+    color: #fff;
+  }
+
+  &.linkedin:hover {
+    background-color: #0072b7;
+    border-color: #0072b7;
+    color: #fff;
+  }
+}
+}
+@media screen and (min-width: 850px){
+  .row-divided>.col+.col:not(.large-12) {
+    border-left: 1px solid #ececec;
+  }
+}
