--- a/statics/css/style.css
+++ b/statics/css/style.css
@@ -13446,54 +13446,37 @@ body { background: #fff; color: #777; scroll-behavior: smooth; -webkit-font-smoo
 .aesthetic_aq { padding-bottom: 30px; }
 .aesthetic_aq .aesthetic_aq_img img { margin: auto; display: block; }
 
-.info-page { overflow: hidden; padding-top: 134px; }
-@media screen and (min-width: 1024px) { .info-page { padding-top: 138px; } }
+.info_about { padding-top: 350px; padding-bottom: 350px; min-height: 500px; position: relative; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-orient: horizontal; -webkit-box-direction: normal; -ms-flex-flow: row; flex-flow: row; -webkit-box-align: center; -ms-flex-align: center; align-items: center; }
 
-.fp-grid { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: start; -ms-flex-pack: start; justify-content: flex-start; overflow: hidden; -ms-flex-wrap: wrap; flex-wrap: wrap; }
-.fp-grid .fp-grid-item { max-height: none; width: 100%; overflow: hidden; will-change: transform; -webkit-transform: translate3d(0, 0, 0); transform: translate3d(0, 0, 0); opacity: 1; transition: opacity .9s,-webkit-transform .9s ease-in-out; -webkit-transition: opacity .9s,-webkit-transform .9s ease-in-out; transition: transform .9s ease-in-out,opacity .9s; transition: transform .9s ease-in-out,opacity .9s,-webkit-transform .9s ease-in-out; margin-bottom: 1px; width: 100%; line-height: 1; padding-left: 0; position: static; }
-.fp-grid .fp-grid-item.is-hidden { -webkit-transform: translate3d(0, 35%, 0); transform: translate3d(0, 35%, 0); opacity: 0; }
-@media screen and (min-width: 768px) { .fp-grid .fp-grid-item { width: calc(50% - 0.5px); margin-right: 0.5px; max-height: 383px; } }
-.fp-grid .fp-grid-item .fp-grid-colour { position: absolute; height: 100%; width: 100%; top: 0; left: 0; -webkit-filter: contrast(100%) brightness(100%) saturate(0.3) sepia(5%); filter: contrast(100%) brightness(100%) saturate(0.3) sepia(5%); background-color: #804D53; }
-.fp-grid .fp-grid-item .fp-grid-content { position: absolute; left: 0; right: 0; top: 0; bottom: 0; overflow: hidden; width: 100%; height: 100%; }
-.fp-grid .fp-grid-item .fp-grid-content img { transition: opacity 1.5s,-webkit-transform 1.5s ease-out; -webkit-transition: opacity 1.5s,-webkit-transform 1.5s ease-out; transition: transform 1.5s ease-out,opacity 1.5s; transition: transform 1.5s ease-out,opacity 1.5s,-webkit-transform 1.5s ease-out; opacity: 1; will-change: transform; width: 100%; height: 100%; position: absolute; left: 50%; top: 50%; -webkit-transform: translate(-50%, -50%) scale(1.03); transform: translate(-50%, -50%) scale(1.03); }
-.fp-grid .fp-grid-item .fp-grid-content img.is-blurred { opacity: 0; }
-.fp-grid .fp-grid-item:hover .fp-grid-content img { -webkit-transform: translate3d(-50%, -50%, 0) scale(1.01); transform: translate3d(-50%, -50%, 0) scale(1); }
-.fp-grid .fp-grid-item .fp-grid-header { position: absolute; top: 0; left: 0; width: 100%; height: 100%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-direction: column; flex-direction: column; -webkit-box-pack: end; -ms-flex-pack: end; justify-content: flex-end; z-index: 200; }
-.fp-grid .fp-grid-item .fp-grid-header .fp-grid-wrapper { margin: 0 30px 20px; }
-@media screen and (min-width: 768px) { .fp-grid .fp-grid-item .fp-grid-header .fp-grid-wrapper { margin: 0 48px 30px; } }
-.fp-grid .fp-grid-item .fp-grid-header .fp-grid-wrapper .fp-grid-title { letter-spacing: .5px; color: #fff; display: block; -webkit-transition: text-shadow 1s; transition: text-shadow 1s; line-height: 28px; font-weight: 600; font-size: 16px; text-shadow: 0.5px 0.1px 2px rgba(0, 0, 0, 0.2); }
-.fp-grid .fp-grid-item .fp-grid-spacer { width: 100%; padding-top: 56.2408223201%; }
-.fp-grid .fp-grid-item .fp-grid-spacer::after { content: ''; display: block; position: absolute; overflow: hidden; z-index: 75; -webkit-animation: loaderAnimation .8s infinite linear; animation: loaderAnimation .8s infinite linear; height: 30px; left: calc(50% - 15px); top: calc(50% - 15px); width: 30px; background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' width='30' height='30' viewBox='0 0 30 30'%3E %3Ccircle cx='15' cy='15' r='14' fill='none' stroke='%23FFFFFF' stroke-opacity='0.3' stroke-width='1px' /%3E %3Ccircle cx='15' cy='15' r='14' fill='none' stroke='%23FFFFFF' stroke-width='1px' stroke-linecap='round' stroke-dashoffset='95' stroke-dasharray='16, 47.123'/%3E %3C/svg%3E"); }
-.fp-grid .fp-grid-item.is-loaded .fp-grid-spacer::after { content: none; }
-.fp-grid .fp-grid-item::after { -webkit-animation: fadeIn 1.5s; animation: fadeIn 1.5s; content: ''; position: absolute; left: 0; bottom: 0; width: 100%; height: 100%; opacity: .7; background: -webkit-gradient(linear, left bottom, left top, color-stop(0, rgba(0, 0, 0, 0.8)), color-stop(30%, rgba(0, 0, 0, 0.4)), color-stop(80%, transparent)); background: linear-gradient(to top, rgba(0, 0, 0, 0.8) 0, rgba(0, 0, 0, 0.4) 30%, transparent 80%); -webkit-transition: opacity 1s ease; transition: opacity 1s ease; }
+.bg-fill { background-position: 65% 52%; background-size: cover; background-repeat: no-repeat; position: absolute; top: 0; left: 0; height: 100%; right: 0; bottom: 0; padding: 0; margin: 0; overflow: hidden; width: 100%; }
 
-.info-details-page .info-details-bg { height: 500px; margin-bottom: 30px; position: relative; }
-@media screen and (min-width: 1024px) { .info-details-page .info-details-bg { height: 73vh; margin-bottom: 100px; } }
-.info-details-page .info-details-bg .fp-grid-item { width: 100%; position: relative; height: 100%; }
-.info-details-page .info-details-bg .fp-grid-item .fp-grid-colour { position: absolute; height: 100%; width: 100%; top: 0; left: 0; -webkit-filter: contrast(100%) brightness(100%) saturate(0.3) sepia(5%); filter: contrast(100%) brightness(100%) saturate(0.3) sepia(5%); background-color: #603333; }
-.info-details-page .info-details-bg .fp-grid-item > .fp-grid-spacer { width: 100%; padding-top: 37.2905027933%; }
-.info-details-page .info-details-bg .fp-grid-item > .fp-grid-spacer::after { content: ''; display: block; position: absolute; overflow: hidden; z-index: 75; -webkit-animation: loaderAnimation .8s infinite linear; animation: loaderAnimation .8s infinite linear; height: 30px; left: calc(50% - 15px); top: calc(50% - 15px); width: 30px; background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' width='30' height='30' viewBox='0 0 30 30'%3E %3Ccircle cx='15' cy='15' r='14' fill='none' stroke='%23FFFFFF' stroke-opacity='0.3' stroke-width='1px' /%3E %3Ccircle cx='15' cy='15' r='14' fill='none' stroke='%23FFFFFF' stroke-width='1px' stroke-linecap='round' stroke-dashoffset='95' stroke-dasharray='16, 47.123'/%3E %3C/svg%3E"); }
-.info-details-page .info-details-bg .fp-grid-item > .fp-grid-content { position: absolute; left: 0; right: 0; top: 0; bottom: 0; overflow: hidden; width: 100%; height: 100%; }
-.info-details-page .info-details-bg .fp-grid-item > .fp-grid-content img { height: 100%; -o-object-fit: cover; object-fit: cover; pointer-events: none; -webkit-user-select: none; -moz-user-select: none; -ms-user-select: none; user-select: none; width: 100%; }
-.info-details-page .info-details-bg .fp-grid-item > .fp-grid-content img.is-blurred { opacity: 0; }
-.info-details-page .info-details-bg .fp-grid-item .fp-ph-gradient { position: absolute; content: ''; top: 0; left: 0; width: 100%; height: 100%; pointer-events: none; background: -webkit-gradient(linear, left top, left bottom, color-stop(26%, transparent), color-stop(96%, #000)); background: linear-gradient(-180deg, transparent 26%, #000 96%); opacity: .4; z-index: 150; -webkit-transition: opacity 1s; transition: opacity 1s; }
-.info-details-page .info-details-bg .fp-grid-item .fp-ph-copy { color: #fff; position: absolute; left: 30px; bottom: 30px; z-index: 200; max-width: 45%; }
-@media screen and (min-width: 1024px) { .info-details-page .info-details-bg .fp-grid-item .fp-ph-copy { left: 45px; max-width: 33vw; } }
-.info-details-page .info-details-bg .fp-grid-item .fp-ph-copy .fp-ph-title { margin: 0; text-shadow: 0.5px 0.1px 2px rgba(0, 0, 0, 0.2); }
-.info-details-page .info-details-bg .fp-grid-item.is-loaded .fp-grid-spacer::after { content: none; }
-.info-details-page .info-detail-desc .container { padding: 40px 30px; }
-@media screen and (min-width: 769px) { .info-details-page .info-detail-desc .container { max-width: 620px; padding: 0; } }
-.info-details-page .info-detail-desc .fp-info-share { margin-bottom: 10px; display: inline-block; position: relative; min-width: 200px; }
-.info-details-page .info-detail-desc .fp-info-share .fp-share-toggle { cursor: pointer; display: inline-block; font-family: "Open Sans",Helvetica,Arial; min-width: 80px; min-height: 32px; height: auto; text-align: center; font-size: 13px; background-color: #ebebeb; border: none; border-radius: 20px; color: #000; font-weight: 400; letter-spacing: .5px; line-height: 19px; padding: 7px 18px; margin: 0; text-decoration: none; -webkit-transition: background-color .3s ease-in-out,color .3s ease-in-out; transition: background-color .3s ease-in-out,color .3s ease-in-out; outline: none; }
-.info-details-page .info-detail-desc .fp-info-share .fp-share-toggle:hover { background: #d9d9d9; color: #000; }
-.info-details-page .info-detail-desc .fp-share-content { left: 102px; position: absolute; top: 1px; width: 100%; }
-@media screen and (min-width: 1024px) { .info-details-page .info-detail-desc .fp-share-content { left: 90px; } }
-.info-details-page .info-detail-desc .fp-share-content .fp-share-list { list-style: none; font-size: 0; }
-.info-details-page .info-detail-desc .fp-share-content .fp-share-list .fp-share-list-item { font-weight: 300; line-height: 1; padding-left: 0; position: static; margin-right: 5px; font-size: 14px; display: inline-block; }
-@media screen and (min-width: 1024px) { .info-details-page .info-detail-desc .fp-share-content .fp-share-list .fp-share-list-item { margin-right: 2px; } }
-.info-details-page .info-detail-desc .fp-share-content .fp-share-list .fp-share-list-item a { background-color: transparent; cursor: pointer; opacity: .7; overflow: hidden; position: relative; -webkit-transition: opacity .3s,background-color .3s; transition: opacity .3s,background-color .3s; border: none; color: #000; width: 30px; height: 30px; line-height: 30px; text-align: center; opacity: 0; display: none; }
-.info-details-page .info-detail-desc .info-detail-text { margin-bottom: 20px; }
-.info-details-page .info-detail-desc .info-detail-text p:first-child { font-size: 16px; font-weight: 300; letter-spacing: .5px; line-height: 29px; }
+.info_about_desc { position: relative; }
+.info_about_desc h2 { font-weight: 700; color: #eac257; font-size: 200%; line-height: 1.3; margin-bottom: 16px; }
+.info_about_desc h3 { color: #eac257; margin-bottom: 10px; font-weight: 700; font-size: 18px; }
+.info_about_desc p { color: #fff; margin-bottom: 20px; font-size: 16px; }
+
+.title_mains { margin-bottom: 40px; }
+.title_mains h1, .title_mains h2 { font-weight: bold; font-family: "Roboto", sans-serif; background-image: -webkit-gradient(linear, left top, right top, from(#64aa20), to(#286311)); background-image: linear-gradient(to right, #64aa20, #286311); -webkit-background-clip: text; -webkit-text-fill-color: transparent; font-size: 30px; margin-bottom: 0; line-height: 1.6; }
+@media screen and (max-width: 767px) { .title_mains h1, .title_mains h2 { font-size: 24px; } }
+
+.info_description { font-size: 16px; color: #1f1f1f; line-height: 1.6; }
+.info_description p { font-size: 16px; line-height: 1.6; margin-bottom: 20px; }
+.info_description ul { padding-left: 30px; }
+.info_description ul li { list-style: disc; font-size: 15px; text-transform: capitalize; margin-bottom: 9px; }
+.info_description ul li p { margin-bottom: 19px; }
+
+.info_img { padding: 0 30px; }
+
+.journey_success { padding-top: 60px; padding-bottom: 60px; background-color: #f6f6f6; }
+.journey_success .img { -webkit-box-shadow: 0 3px 6px -4px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23); box-shadow: 0 3px 6px -4px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23); position: relative; overflow: hidden; }
+
+.enthusiasm { background-color: #f6f6f6; padding-top: 30px; padding-bottom: 30px; }
+.enthusiasm blockquote { position: relative; font-size: 19px; margin: 0 0 24px; padding: 0 24px 0 36px; border-left: 2px solid #446084; font-style: italic; color: #333; }
+.enthusiasm blockquote p { font-size: 19px; line-height: 1.6; }
+
+@media (min-width: 1200px) { .enthusiasm .container { max-width: 50%; } }
+.achievement { padding-top: 30px; padding-bottom: 30px; }
+@media screen and (max-width: 767px) { .achievement .achievement_img { margin-bottom: 30px; } }
 
 .home_news { background-size: cover; background-repeat: no-repeat; background-position: 50% 50%; position: relative; padding-top: 30px; padding-bottom: 30px; min-height: 650px; }
 .home_news .title_bg_main h2 { background-image: -webkit-gradient(linear, left top, right top, from(#FFFA8A), to(#DDAC17)); background-image: linear-gradient(to right, #FFFA8A, #DDAC17); -webkit-background-clip: text; -webkit-text-fill-color: transparent; }
